--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -98,6 +98,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import logging\n",
+    "\n",
+    "for logger_name in ('snowflake.snowpark', 'snowflake.connector'):\n",
+    "    logger = logging.getLogger(logger_name)\n",
+    "    logger.setLevel(logging.DEBUG)\n",
+    "    ch = logging.StreamHandler()\n",
+    "    ch.setLevel(logging.DEBUG)\n",
+    "    ch.setFormatter(logging.Formatter('%(asctime)s - %(threadName)s %(filename)s:%(lineno)d - %(funcName)s() - %(levelname)s - %(message)s'))\n",
+    "    logger.addHandler(ch)\n",
+    "\n",
     "df.to_pandas()"
    ]
   },
